# Marathon-Shell

./: .gitignore  APKBUILD  CMakeLists.txt  README.md  TROUBLESHOOTING.md  compile_commands.json  diagnostics.qml  eglfs.json  marathon-shell-session  run.sh
apps/: CMakeLists.txt
apps/browser/: BrowserApp.qml  CMakeLists.txt
apps/browser/components/: BrowserDrawer.qml  TabCard.qml  WebView.qml
apps/browser/pages/: BookmarksPage.qml  BrowserSettingsPage.qml  HistoryPage.qml  HomepagePage.qml  SearchEnginePage.qml  TabsPage.qml
apps/browser/src/: BrowserData.cpp  BrowserData.h
apps/calculator/: CMakeLists.txt  CalculatorApp.qml
apps/calendar/: CMakeLists.txt  CalendarApp.qml
apps/calendar/components/: EventListItem.qml
apps/calendar/pages/: CalendarGridPage.qml  EventCreationPage.qml  EventDetailPage.qml  EventListPage.qml
apps/calendar/src/: CalendarStorage.cpp  CalendarStorage.h
apps/calendar/stores/: CalendarStorage.qml  qmldir
apps/camera/: CMakeLists.txt  CameraApp.qml
apps/camera/src/: CameraController.cpp  CameraController.h  SoftwareVideoOutput.cpp  SoftwareVideoOutput.h
apps/clock/: CMakeLists.txt  ClockApp.qml  manifest.json
apps/clock/components/: AddCityDialog.qml  AlarmItem.qml  ClockIcon.qml
apps/clock/pages/: AlarmEditorDialog.qml  AlarmPage.qml  ClockPage.qml  StopwatchPage.qml  TimerPage.qml  WorldClockPage.qml
apps/gallery/: CMakeLists.txt  GalleryApp.qml
apps/gallery/pages/: AlbumDetailPage.qml  PhotoViewerPage.qml
apps/maps/: CMakeLists.txt  MapsApp.qml
apps/messages/: CMakeLists.txt  MessagesApp.qml
apps/messages/components/: ConversationListItem.qml  DateSeparator.qml  MessageBubble.qml  MessageInputBar.qml
apps/messages/pages/: ChatPage.qml  ConversationsListPage.qml  NewConversationPage.qml
apps/music/: CMakeLists.txt  MusicApp.qml
apps/notes/: CMakeLists.txt  NotesApp.qml
apps/notes/components/: NoteItem.qml
apps/notes/pages/: NoteEditorPage.qml  NotesListPage.qml
apps/phone/: CMakeLists.txt  PhoneApp.qml
apps/phone/pages/: ActiveCallPage.qml  CallHistoryPage.qml  ContactEditorPage.qml  ContactsPage.qml  DialerPage.qml  IncomingCallScreen.qml
apps/settings/: CMakeLists.txt  SettingsApp.qml  manifest.json
apps/settings/components/: BluetoothPairDialog.qml  SettingsPageTemplate.qml  WiFiPasswordDialog.qml
apps/settings/pages/: AboutPage.qml  AppManagerPage.qml  AppSortPage.qml  BatteryPage.qml  BluetoothPage.qml  CellularPage.qml  DefaultAppsPage.qml  DisplayPage.qml  HiddenAppsPage.qml  KeyboardPage.qml  NotificationsPage.qml  OpenSourceLicensesPage.qml  PrivacyPolicyPage.qml  QuickSettingsPage.qml  ScalePage.qml  ScreenTimeoutPage.qml  SecurityPage.qml  SettingsMainPage.qml  SoundPage.qml  SoundPickerPage.qml  StoragePage.qml  TermsOfServicePage.qml  WallpaperPage.qml  WiFiPage.qml
apps/settings/src/: KeyboardSettingsStore.cpp  KeyboardSettingsStore.h  KeyboardSettingsStore.qml  SettingsController.cpp  SettingsController.h  StorageInfo.cpp  StorageInfo.h
apps/store/: CMakeLists.txt  StoreApp.qml
apps/store/components/: AppListItem.qml  FeaturedAppCard.qml  InfoRow.qml
apps/store/pages/: AppDetailPage.qml  InstalledAppsPage.qml  StoreFrontPage.qml  UpdatesPage.qml
apps/template/: TemplateApp.qml
apps/template/pages/: MainPage.qml
apps/terminal/: CMakeLists.txt  TerminalApp.qml  manifest.json
apps/terminal/components/: TerminalSession.qml  TerminalTab.qml  TerminalTabButton.qml  VirtualKeyRow.qml
apps/terminal/src/: TerminalEngine.cpp  TerminalEngine.h  TerminalRenderer.cpp  TerminalScreen.h  (+1 more)
apps/test/: TestApp.qml  manifest.json
marathon-services/: CMakeLists.txt
marathon-services/src/: callhistorymanager.cpp  callhistorymanager.h  contactsmanager.cpp  contactsmanager.h  medialibrarymanager.cpp  medialibrarymanager.h  musiclibrarymanager.cpp  musiclibrarymanager.h  smsservice.cpp  smsservice.h  telephonyservice.cpp  telephonyservice.h
marathon-ui/: CMakeLists.txt
marathon-ui/Containers/: CMakeLists.txt  MApp.qml  MCard.qml  MFormCard.qml  MListItem.qml  MPanel.qml  MPullToRefresh.qml  MScrollView.qml  MSection.qml  MSectionHeader.qml  MSettingsListItem.qml  MSwipeDelegate.qml
marathon-ui/Controls/: CMakeLists.txt  MRadioGroup.qml  MSlider.qml  MToggle.qml
marathon-ui/Core/: CMakeLists.txt  Icon.qml  MAppIcon.qml  MButton.qml  MCircularIconButton.qml  MIconButton.qml
marathon-ui/Effects/: CMakeLists.txt  MHaptics.qml  MRipple.qml
marathon-ui/Feedback/: CMakeLists.txt  MActivityIndicator.qml
marathon-ui/Lists/: CMakeLists.txt
marathon-ui/Modals/: CMakeLists.txt  MConfirmDialog.qml  MModal.qml  MSheet.qml
marathon-ui/Navigation/: CMakeLists.txt  MAppRouter.qml  MPageIndicator.qml  MSwipeView.qml  MTopBar.qml
marathon-ui/Theme/: CMakeLists.txt  MColors.qml  MElevation.qml  MMotion.qml  MRadius.qml  MSpacing.qml  MTypography.qml
shell/: CMakeLists.txt  main.cpp  resources.qrc
shell/qml/: Main.qml  MarathonShell.qml
shell/src/: applaunchservice.cpp  applaunchservice.h  applifecyclemanager.cpp  applifecyclemanager.h  appmodel.cpp  appmodel.h  audiopolicycontroller.cpp  audioroutingmanager.cpp  audioroutingmanager.h  bluetoothmanager.cpp  bluetoothmanager.h  crashhandler.cpp  cursormanager.cpp  cursormanager.h  desktopfileparser.cpp  desktopfileparser.h  displaymanagercpp.cpp  displaypolicycontroller.cpp  displaypolicycontroller.h  flashlightmanagercpp.cpp  flashlightmanagercpp.h  hapticmanager.cpp  hapticmanager.h  lunasvgimageprovider.cpp  lunasvgimageprovider.h  marathonapploader.cpp  marathonapploader.h  marathoninputmethodengine.cpp  marathoninputmethodengine.h  marathonpermissionmanager.cpp  marathonpermissionmanager.h  mpris2controller.cpp  mpris2controller.h  networkmanagercpp.cpp  portalmanager.cpp  portalmanager.h  powermanagercpp.cpp  powermanagercpp.h  powerpolicycontroller.cpp  powerpolicycontroller.h  (+12 more)
tests/: CMakeLists.txt  test_apppackager.cpp  test_appverifier.cpp  test_wordtrie.cpp  test_wordtrie_integration.cpp
tests/keyboard/: CMakeLists.txt
tools/marathon-app-runner/: CMakeLists.txt  calendarmanagercpp.cpp  calendarmanagercpp.h  main.cpp
(+323 files in other folders)
